tests/error/no_compat_sub2.gw
Object o;
int i[o];
